--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+	<script src="./app.js"></script>
+	<link href='./styles.css' rel='stylesheet' type="text/css">
+</head>
 
-<div ng-app>
+<body ng-app="myApp">
     <div id="todoapp" ng-controller="TodoCtrl">
-        <header>
             <h1>The todo-list Angular.js application</h1>
             <input id="new-todo" type="text" ng-model="todoText"  size="30"
                    placeholder="What needs to be done?" ng-keyup="addTodo()"/>
-        </header>
 
         <section id="main" style="display: block;">
             <div ng-show="isTodo()">
@@ -35,4 +39,5 @@
         </footer>
 
     </div>
-</div>
+</body>
+</html>
